Updated Navigation.less file

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,15 @@
-// Navigation Styles here
+.LogoandNav{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    border-bottom: 2px dotted gray;
+
+    nav a{
+        text-decoration: none;
+        font: black;
+        font-size: 16px;
+        padding: 8px;
+    }
+}
