--- a/less/home-page.less
+++ b/less/home-page.less
@@ -59,3 +59,20 @@
     }
   }
 }// home
+/*--------------Main Header-------------*/
+.MainHeader{
+  border-bottom: 2px dashed @navigation-border;
+  width: 60%;
+  margin: 0% auto;
+  display:flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+
+  div{
+    display: flex;
+    justify-content: center;
+  }
+  h2{
+    margin-top: 3%;
+  }
+}
