--- a/less/navigation.less
+++ b/less/navigation.less
@@ -4,11 +4,19 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
-    border-bottom: 2px dotted gray;
+    border-bottom: 2px dashed @navigation-border;
+    margin-bottom: 0%;
+    
+    h1{
+        margin-left: 5%
+    }
+    nav{
+        margin-right: 5%;
+    }
 
     nav a{
         text-decoration: none;
-        font: black;
+        color: @font-color;
         font-size: 16px;
         padding: 8px;
     }
