finished buttons mixin

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,10 @@
 // Mixins in here
+.signmeupmixin(){
+    background-color: darkcyan;
+    color: white;
+    width: 70%;
+}
+
+.destination .btn{
+    .signmeupmixin();
+}
