--- a/css/index.css
+++ b/css/index.css
@@ -182,6 +182,11 @@ img {
   border-bottom: 2px dashed #C0C0C0;
   margin-bottom: 0%;
 }
+@media (max-width: 500px) {
+  .LogoandNav {
+    flex-direction: column;
+  }
+}
 .LogoandNav h1 {
   margin-left: 5%;
 }
@@ -193,6 +198,11 @@ img {
   color: #212529;
   font-size: 16px;
   padding: 8px;
+}
+@media (max-width: 500px) {
+  .LogoandNav nav a {
+    padding: 33px;
+  }
 }
 .footer {
   width: 100%;
@@ -266,4 +276,25 @@ img {
 }
 .MainHeader h2 {
   margin-top: 3%;
+}
+@media (max-width: 500px) {
+  .MainHeader {
+    width: 100%;
+  }
+}
+.MainHeader div,
+.MainHeader h2,
+.MainHeader p {
+  margin-left: 5%;
+  margin-right: 5%;
+}
+@media (max-width: 500px) {
+  .content-section {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    margin: 0;
+    padding: 0;
+  }
 }
