--- a/less/navigation.less
+++ b/less/navigation.less
@@ -6,18 +6,31 @@
     justify-content: space-around;
     border-bottom: 2px dashed @navigation-border;
     margin-bottom: 0%;
+
+    @media @mobile{
+        flex-direction: column;
+    }
     
     h1{
         margin-left: 5%
     }
     nav{
         margin-right: 5%;
-    }
+      
+        }
+    
 
     nav a{
         text-decoration: none;
         color: @font-color;
         font-size: 16px;
         padding: 8px;
+        
+        @media @mobile{
+            padding: 33px;
+
+        }
+
     }
 }
+
